@@ -1,3 +1,8 @@
+2009-02-22  Gautier Portet <kassoulet gmail com>
+
+	* src/soundconverter.py: Add notification at the end of
+	 conversion.
+
 2009-01-26  Gautier Portet <kassoulet gmail com>
 
 	* src/soundconverter.py, data/soundconverter.glade:
